--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ highlight:
 # Category & Tag
 default_category: uncategorized
 category_map:
-tag_map: hexo
+tag_map: 
 
 # Archives
 ## 2: Enable pagination
@@ -51,8 +51,9 @@ tag: 2
 ## You can customize the logger format as defined in
 ## http://www.senchalabs.org/connect/logger.html
 port: 4000
+server_ip: localhost
 logger: false
-logger_format:
+logger_format: dev
 
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
@@ -69,16 +70,20 @@ pagination_dir: page
 # Disqus
 disqus_shortname:
 
+avatar: "https://avatars1.githubusercontent.com/u/929502?v=3&s=150"
+
+duoshuo: true
+
 # Extensions
 ## Plugins: https://github.com/tommy351/hexo/wiki/Plugins
 ## Themes: https://github.com/tommy351/hexo/wiki/Themes
-#theme: light , hexo2bootstrap
-theme: hexo2bootstrap
+#theme: light , hexo2bootstrap yilia
+theme: yilia
 
 exclude_generator:
 
 # Deployment
 ## Docs: http://zespia.tw/hexo/docs/deploy.html
 deploy:
-  type: github
+  type: git
   repository: git@github.com:youxiachai/youxiachai.github.io.git
