--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "3.0.0-rc.3",
   "private": true,
   "hexo": {
-    "version": "3.0.0-rc.4"
+    "version": "3.0.1"
   },
   "dependencies": {
-    "hexo": "^3.0.0-rc.4",
+    "hexo": "^3.0.1",
     "hexo-deployer-git": "0.0.3",
     "hexo-generator-archive": "*",
     "hexo-generator-category": "*",
