--- a/_config.hexo-theme-Claudia.yml
+++ b/_config.hexo-theme-Claudia.yml
@@ -31,7 +31,7 @@ user:
 # API config: https://utteranc.es/
 comment_utteranc:
   enable: false
-  repo: Haojen/Claudia-theme-blog # your blog repo
+  repo: youxiachai/Claudia-theme-blog # your blog repo
 
 
 # documents: https://valine.js.org/quickstart.html
@@ -61,4 +61,4 @@ ga_domain:
 ba_track_id: '75f5de70aa60d9d2b194636cd8b7b621'
 
 # picture of about page
-about_pic: about.png
+about_pic: 
